--- a/scss/main.scss
+++ b/scss/main.scss
@@ -117,6 +117,50 @@ main {
     }
 }
 
+// Project Page
+.projects {
+    display: grid;
+    grid-gap: .8rem;
+    grid-template-columns: repeat(3, 1fr);
+
+    img {
+        width: 100%;
+        border: 3px solid #fff;
+
+        &:hover {
+            opacity: .5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
+}
+
+// Button Styles
+.btn {
+    display: block;
+    padding: .5rem 1rem;
+    border: 0;
+    margin-bottom: .3rem;
+
+    &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
+
+    &-dark {
+        @extend.btn;
+        background: darken($primary-color, 50);
+        color: #fff;
+    }
+
+    &-light {
+        @extend .btn;
+        background: lighten($primary-color, 50);
+    }
+
+}
+
+
 //  Sticky Footer , calc function on main
 #main-footer {
     text-align: center;
