--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,8 +1,11 @@
-$primary-color: #444;
-$secondary-color : #eece1a;
+$primary-color: #252525;
+// $secondary-color : #eece1a;
+$secondary-color: #FFC040;
+$heading-font: cursive;
+
 $show-home-image: true;
 $home-image: url(../img/background2.jpg);
-$background-opacity: .9;
+$background-opacity: .4;
 
 @mixin easeOut {
     transition: all .4s ease-out;
@@ -22,7 +25,6 @@ $background-opacity: .9;
                 right: 0;
                 width: 100%;
                 height: 100%;
-                // background: rgba(0, 0, 0, .6);
                 background: rgba($primary-color, $background-opacity);
                 z-index: -1;
             }
@@ -37,7 +39,7 @@ $background-opacity: .9;
     }
 
     @else {
-        @return #fff;
+        @return #ebebeb;
 
     }
 }
