--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -93,7 +93,7 @@
             height: 250px;
             background: url(../img/shanti2.jpg);
             border-radius: 50%;
-            border: solid 3px $secondary-color;
+            border: 3px solid $secondary-color;
 
 
         }
