--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'menu';
 
 
+
 * {
     box-sizing: border-box;
 }
@@ -14,6 +15,8 @@ body {
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
+    font-family: 'Montserrat',
+        sans-serif;
 }
 
 // Headings
@@ -26,11 +29,13 @@ h3 {
 
     &.lg-heading {
         font-size: 6rem;
+        font-family: $heading-font;
     }
 
     &.sm-heading {
         margin-bottom: 2rem;
         padding: .2rem 2rem;
+        letter-spacing: 1px;
         background: rgba(lighten($primary-color, 2), .5);
     }
 }
@@ -163,6 +168,17 @@ main {
 
 }
 
+// Project Info Styles
+.project-info {
+    border: 1px solid $secondary-color;
+    border-radius: 20px;
+    display: inline-block;
+    margin: 1rem .3rem 0 0;
+    padding: .3rem 1rem;
+    font-size: .9rem;
+    letter-spacing: 1px;
+}
+
 
 
 
@@ -173,6 +189,7 @@ main {
     padding: .5rem 1rem;
     border: 0;
     margin-bottom: .3rem;
+    text-align: center;
 
     &:hover {
         background: $secondary-color;
