Added Tangerine Font

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,7 +1,8 @@
 $primary-color: #252525;
 // $secondary-color : #eece1a;
 $secondary-color: #FFC040;
-$heading-font: cursive;
+$heading-font: 'Tangerine',
+cursive;
 
 $show-home-image: true;
 $home-image: url(../img/background2.jpg);
