Added Emilys Candy Font

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Cherry+Swash|Emilys+Candy|Flavors|Fredericka+the+Great|Katibeh|Milonga&display=swap');
+
+
 $primary-color: #252525;
 // $secondary-color : #eece1a;
 $secondary-color: #FFC040;
-$heading-font: 'Tangerine',
+$heading-font: 'Emilys Candy',
 cursive;
-
 $show-home-image: true;
 $home-image: url(../img/background2.jpg);
 $background-opacity: .4;
