--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -7,8 +7,9 @@ $secondary-color: #FFC040;
 $heading-font: 'Emilys Candy',
 cursive;
 $show-home-image: true;
-$home-image: url(../img/background2.jpg);
-$background-opacity: .4;
+$home-image: url(../img/sunset2.jpg);
+
+$background-opacity: .7;
 
 @mixin easeOut {
     transition: all .4s ease-out;
@@ -21,6 +22,7 @@ $background-opacity: .4;
             background-attachment: fixed;
             background-size: cover;
 
+
             &:after {
                 content: "";
                 position: absolute;
@@ -30,8 +32,23 @@ $background-opacity: .4;
                 height: 100%;
                 background: rgba($primary-color, $background-opacity);
                 z-index: -1;
+
             }
         }
+    }
+}
+
+@mixin overlay {
+    &:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba($primary-color, $background-opacity);
+        z-index: -1;
+
     }
 }
 
