Disabled horizontal scrolling on mobile

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -76,6 +76,8 @@
 @include mediaSm {
     body {
         background: url('../img/sunset2-sm.jpg');
+        background-attachment: fixed;
+        background-size: cover;
 
     }
 
