--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+html,
+body {
+    overflow-x: hidden;
+}
+
 body {
     // @include background;
     background: url('../img/sunset2.jpg');
