added bg-image mobile version

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -75,7 +75,7 @@
 // Smartphones
 @include mediaSm {
     body {
-        background: url('../img/sunset2-sm.jpg');
+        background: url('../img/sunset2-320.jpg');
         background-attachment: fixed;
         background-size: cover;
 
