--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -51,7 +51,7 @@
         transform: translate3d(100%, 0, 0);
 
         .portrait {
-            background: url(../img/shanti2_small.jpg);
+            background: url(../img/profile-pic-320.jpg);
             width: 150px;
             height: 150px;
         }
