--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -75,9 +75,10 @@
 // Smartphones
 @include mediaSm {
     body {
-        background: url('../img/sunset2-320.jpg');
+        background: url('../img/sunset2-320.jpg') no-repeat;
         background-attachment: fixed;
         background-size: cover;
+
 
     }
 
