background-image mobile tweaks

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -78,6 +78,7 @@
         background: url('../img/sunset2-320.jpg') no-repeat;
         background-attachment: fixed;
         background-size: cover;
+        z-index: -1;
 
 
     }
