--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,11 +11,19 @@ body {
     overflow-x: hidden;
 }
 
+html {
+    background: url(../img/sunset2.jpg) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+}
+
 body {
     // @include background;
-    background: url('../img/sunset2.jpg');
-    background-attachment: fixed;
-    background-size: cover; // background: $primary-color;
+    // background: url('../img/sunset2.jpg');
+    // background-attachment: fixed;
+    // background-size: cover; 
+    // background: $primary-color;
     color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
