--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -77,7 +77,7 @@
     body {
         background: url('../img/sunset2-640.jpg') no-repeat;
         background-attachment: fixed;
-        // background-size: 100%;
+        background-size: 100%;
         background-size: cover;
         z-index: -1;
 
