from body to html

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -74,12 +74,13 @@
 
 // Smartphones
 @include mediaSm {
-    body {
+    html {
         background: url('../img/sunset2-640.jpg') no-repeat;
         background-attachment: fixed;
         background-size: 100%;
         background-size: cover;
         z-index: -1;
+        height: 100%;
 
 
     }
