from small to tablet

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -15,6 +15,16 @@
 //  Tablets & Small Laptops
 @include mediaMd {
 
+    html {
+        background: url('../img/sunset2-640.jpg') no-repeat;
+        background-attachment: fixed;
+        background-position: center center;
+        background-size: 100%;
+        background-size: cover;
+        z-index: -1;
+
+    }
+
     // vorher main
     main {
         align-items: center;
@@ -77,11 +87,10 @@
     html {
         background: url('../img/sunset2-640.jpg') no-repeat;
         background-attachment: fixed;
+        background-position: center center;
         background-size: 100%;
         background-size: cover;
         z-index: -1;
-        height: 100%;
-
 
     }
 
