--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'config';
 @import 'menu';
-// @import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
 
 * {
     box-sizing: border-box;
@@ -12,6 +12,7 @@ body {
 }
 
 html {
+
     background: url(../img/sunset2.jpg) no-repeat center center fixed;
     background-size: cover;
     height: 100%;
@@ -76,7 +77,7 @@ header {
 main {
     // padding: 4rem;
     // calc to create a sticky footer
-    min-height: calc(100vh - 60px);
+    // min-height: calc(100vh - 60px);
 
     .icons {
         margin-top: 1rem;
