--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -19,9 +19,12 @@
         background: url('../img/sunset2-640.jpg') no-repeat;
         background-attachment: fixed;
         background-position: center center;
+        -webkit-background-size: 100%;
+        -moz-background-size: 100%;
+        -o-background-size: 100%;
         background-size: 100%;
-        background-size: cover;
-        z-index: -1;
+        // background-size: cover;
+        z-index: -10;
 
     }
 
