--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -16,7 +16,7 @@
 @include mediaMd {
 
     html {
-        background: url('../img/sunset2-sm.jpg') no-repeat;
+        background: url('../img/sunset2-long.jpg') no-repeat;
         background-attachment: fixed;
         background-position: center center;
         -webkit-background-size: 100%;
@@ -88,7 +88,7 @@
 // Smartphones
 @include mediaSm {
     html {
-        background: url('../img/sunset2-640.jpg') no-repeat;
+        background: url('../img/sunset2-long.jpg') no-repeat;
         background-attachment: fixed;
         background-position: center center;
         background-size: 100%;
