--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -87,14 +87,30 @@
 
 // Smartphones
 @include mediaSm {
-    html {
-        background: url('../img/sunset2-long.jpg') no-repeat;
-        background-attachment: fixed;
-        background-position: center center;
-        background-size: 100%;
-        background-size: cover;
-        z-index: -1;
+    // html {
+    //     background: url('../img/sunset2-long.jpg') no-repeat;
+    //     background-attachment: fixed;
+    //     background-position: center center;
+    //     background-size: 100%;
+    //     background-size: cover;
+    //     z-index: -1;
 
+    // }
+
+    body:before {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        background: url(photos/2452.jpg) no-repeat center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
 
 
