--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -27,7 +27,7 @@
     //     z-index: -10;
     // }
 
-    .bg-image {
+    #bg-image {
         background: url('../img/sunset2-long.jpg') no-repeat;
         background-attachment: fixed;
         background-position: center center;
