--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,11 @@
 
 html,
 body {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+
     overflow-x: hidden;
 }
 
@@ -99,18 +104,7 @@ main {
         .lg-heading {
             margin-top: 20vh;
         }
-
     }
-
-    //   hab ich geadded
-    // &#about {
-    //     @include background;
-    //     background: $primary-color;
-    //     color: set-text-color($primary-color);
-    //     height: 100%;
-    //     margin: 0;
-    // }
-
 }
 
 section {
