--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -25,7 +25,7 @@
         background-size: 100%;
         // background-size: cover;
         z-index: -10;
-        overflow: hidden;
+        overflow-x: hidden;
     }
 
 
