--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,6 @@ body {
     height: 100%;
     margin: 0px;
     padding: 0px;
-
     overflow-x: hidden;
 }
 
@@ -113,6 +112,9 @@ section {
 }
 
 .divider {
+    background: transparent;
+    margin: 0;
+    padding: 0;
     height: 100vh;
     width: 100%;
     overflow: hidden;
