home overflow hidden footer disabeld

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -98,7 +98,7 @@ main {
 
     //   vorher #home
     #home {
-        // overflow: hidden;
+        overflow: hidden;
 
         .lg-heading {
             margin-top: 20vh;
