--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -23,7 +23,7 @@
         -moz-background-size: 100%;
         -o-background-size: 100%;
         background-size: 100%;
-        background-size: contain;
+        background-size: cover;
         z-index: -10;
         overflow-x: hidden;
     }
