--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,29 +10,18 @@ html,
 body {
     width: 100%;
     height: 100%;
-    margin: 0px;
-    padding: 0px;
+    // margin: 0px;
+    // padding: 0px;
     overflow-x: hidden;
 }
 
-html {
-
-    background: url(../img/sunset2.jpg) no-repeat center center fixed;
-    background-size: cover;
-    height: 100%;
-    overflow: hidden;
-}
-
 body {
-    // @include background;
-    // background: url('../img/sunset2.jpg');
-    // background-attachment: fixed;
-    // background-size: cover; 
-    // background: $primary-color;
+    @include background;
+    background: url('../img/sunset2.jpg');
+    background: $primary-color;
     color: set-text-color($primary-color);
     height: 100%;
     margin: 0;
-    // font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.5;
     font-family: 'Montserrat', sans-serif;
 }
@@ -98,7 +87,7 @@ main {
 
     //   vorher #home
     #home {
-        overflow: hidden;
+        // overflow: hidden;
 
         .lg-heading {
             margin-top: 20vh;
@@ -112,22 +101,20 @@ section {
 }
 
 .divider {
-    background: transparent;
-    margin: 0;
-    padding: 0;
+
     height: 100vh;
     width: 100%;
     overflow: hidden;
 }
 
 // OVerlays
-#home,
+
 #about,
 #projects,
 #contact {
     // @include overlay;
     background: rgba(0, 0, 0, .7);
-    z-index: 3;
+
 
 }
 
