--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,90 +1,82 @@
 @import url('https://fonts.googleapis.com/css?family=Cherry+Swash|Emilys+Candy|Flavors|Fredericka+the+Great|Katibeh|Milonga&display=swap');
 
-
 $primary-color: #252525;
 // $secondary-color : #eece1a;
-$secondary-color: #FFC040;
-$heading-font: 'Emilys Candy',
-cursive;
+$secondary-color: #ffc040;
+$heading-font: 'Emilys Candy', cursive;
 $show-home-image: true;
 $home-image: url(../img/sunset2.jpg);
 
-$background-opacity: .6;
+$background-opacity: 0.5;
 
 @mixin easeOut {
-    transition: all .4s ease-out;
+	transition: all 0.4s ease-out;
 }
 
 @mixin background {
-    @if $show-home-image {
-        &#bg-image {
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
+	@if $show-home-image {
+		&#bg-image {
+			background: $home-image;
+			background-attachment: fixed;
+			background-size: cover;
 
-
-            &:after {
-                content: "";
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-                background: rgba($primary-color, $background-opacity);
-                z-index: -1;
-
-            }
-        }
-    }
+			&:after {
+				content: '';
+				position: absolute;
+				top: 0;
+				right: 0;
+				width: 100%;
+				height: 100%;
+				background: rgba($primary-color, $background-opacity);
+				z-index: -1;
+			}
+		}
+	}
 }
 
 @mixin overlay {
-    &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba($primary-color, $background-opacity);
-        z-index: -1;
-
-    }
+	&:after {
+		content: '';
+		position: absolute;
+		top: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		background: rgba($primary-color, $background-opacity);
+		z-index: -1;
+	}
 }
 
 // Set Text Color
 @function set-text-color($color) {
-    @if (lightness($color) >40) {
-        @return #000;
-    }
-
-    @else {
-        @return #ebebeb;
-
-    }
+	@if (lightness($color) >40) {
+		@return #000;
+	} @else {
+		@return #ebebeb;
+	}
 }
 
 // Media Queries Mixins
 @mixin mediaSm {
-    @media screen and (max-width:500px) {
-        @content;
-    }
+	@media screen and (max-width: 500px) {
+		@content;
+	}
 }
 
 @mixin mediaMd {
-    @media screen and (max-width:768px) {
-        @content;
-    }
+	@media screen and (max-width: 768px) {
+		@content;
+	}
 }
 
 @mixin mediaLg {
-    @media screen and (min-width:769px) and (max-width: 1170px) {
-        @content;
-    }
+	@media screen and (min-width: 769px) and (max-width: 1170px) {
+		@content;
+	}
 }
 
 @mixin mediaXl {
-    @media screen and (min-width:1171px) {
-        @content;
-    }
+	@media screen and (min-width: 1171px) {
+		@content;
+	}
 }
