--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -105,4 +105,10 @@
     .projects {
         grid-template-columns: 1fr;
     }
+
+    #projects {
+        .content {
+            padding: 2rem;
+        }
+    }
 }
