--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,27 +3,28 @@
 @import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html,
 body {
-	width: 100%;
-	height: 100%;
-	// margin: 0px;
-	// padding: 0px;
-	overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+    // margin: 0px;
+    // padding: 0px;
+    overflow-x: hidden;
+    min-height: calc(100vh - 60px);
 }
 
 body {
-	@include background;
-	background: url('../img/sunset2.jpg');
-	background: $primary-color;
-	color: set-text-color($primary-color);
-	height: 100%;
-	margin: 0;
-	line-height: 1.5;
-	font-family: 'Montserrat', sans-serif;
+    @include background;
+    // background: url('../img/sunset2.jpg');
+    // background: $primary-color;
+    color: set-text-color($primary-color);
+    // height: 100%;
+    margin: 0;
+    line-height: 1.5;
+    font-family: 'Montserrat', sans-serif;
 }
 
 // Headings
@@ -31,268 +32,266 @@ body {
 h1,
 h2,
 h3 {
-	margin: 0;
-	font-weight: 400;
+    margin: 0;
+    font-weight: 400;
 
-	&.lg-heading {
-		font-size: 6rem;
-		font-family: $heading-font;
-	}
+    &.lg-heading {
+        font-size: 6rem;
+        font-family: $heading-font;
+    }
 
-	&.sm-heading {
-		margin-bottom: 2rem;
-		padding: 0.2rem 2rem;
-		letter-spacing: 1px;
-		background: rgba(lighten($primary-color, 2), 0.5);
-	}
+    &.sm-heading {
+        margin-bottom: 2rem;
+        padding: 0.2rem 2rem;
+        letter-spacing: 1px;
+        background: rgba(lighten($primary-color, 2), 0.5);
+    }
 
-	&.xs-heading {
-		color: $secondary-color;
-	}
+    &.xs-heading {
+        color: $secondary-color;
+    }
 }
 
 a {
-	color: #fff;
-	text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 
 header {
-	position: fixed;
-	z-index: 2;
-	width: 100%;
+    position: fixed;
+    z-index: 2;
+    width: 100%;
 }
 
 .text-secondary {
-	color: $secondary-color;
+    color: $secondary-color;
 }
 
 // vorher main
 main {
-	// padding: 4rem;
-	// calc to create a sticky footer
-	// min-height: calc(100vh - 60px);
+    // padding: 4rem;
+    // calc to create a sticky footer
+    // min-height: calc(100vh - 60px);
 
-	.icons {
-		margin-top: 1rem;
+    .icons {
+        margin-top: 1rem;
 
-		a {
-			padding: 0.4rem;
+        a {
+            padding: 0.4rem;
 
-			&:hover {
-				color: $secondary-color;
-				@include easeOut;
-			}
-		}
-	}
+            &:hover {
+                color: $secondary-color;
+                @include easeOut;
+            }
+        }
+    }
 
-	//   vorher #home
-	#home {
-		// overflow: hidden;
+    //   vorher #home
+    #home {
+        // @include background;
+        overflow: hidden;
 
-		.lg-heading {
-			margin-top: 20vh;
-		}
-	}
+        .lg-heading {
+            margin-top: 20vh;
+        }
+    }
 }
 
 section {
-	padding: 4rem;
-	min-height: 100vh;
+    padding: 4rem;
+    min-height: 100vh;
+
 }
 
 #about,
 // #projects,
-#contact {
-	// @include overlay;
-	background: rgba(0, 0, 0, 0.8);
+// #contact
+    {
+    // @include overlay;
+    background: rgba(0, 0, 0, 0.8);
+
 }
 
 // Skewed
 #about {
-	&.skewed {
-		transform: skew(0deg, -10deg);
-		padding-top: 8rem;
-	}
+    &.skewed {
+        transform: skew(0deg, -10deg);
+        padding-top: 8rem;
+    }
 
-	.content {
-		transform: skew(0deg, 10deg);
-		padding-bottom: 7rem;
-	}
+    .content {
+        transform: skew(0deg, 10deg);
+        padding-bottom: 7rem;
+    }
 }
 
 #projects {
-	// background: url(../img/sunset2.jpg) no-repeat center;
-	// background: $primary-color;
-	&.skewed {
-		transform: skew(0deg, -10deg);
-		background: $primary-color;
-		padding-bottom: 7rem;
-	}
 
-	.content {
-		transform: skew(0deg, 10deg);
-		padding: 4rem;
-	}
+    // background: url(../img/sunset2.jpg) no-repeat center;
+    // background: $primary-color;
+    &.skewed {
+        transform: skew(0deg, -10deg);
+        background: $primary-color;
+        padding-bottom: 7rem;
+    }
+
+    .content {
+        transform: skew(0deg, 10deg);
+        padding: 4rem;
+    }
 }
 
-#contact {
-	&.skewed {
-		transform: skew(0deg, -10deg);
-		padding-top: 7rem;
-	}
+// #contact {
+//     &.skewed {
+//         transform: skew(0deg, -10deg);
+//         padding-top: 7rem;
+//     }
 
-	.content {
-		transform: skew(0deg, 10deg);
-	}
-}
+//     .content {
+//         transform: skew(0deg, 10deg);
+//     }
+// }
 
-#main-footer {
-	transform: skew(0deg, -10deg);
-
-	.content {
-		transform: skew(0deg, 10deg);
-	}
-}
 
 // About Page
 
 .about-info {
-	display: grid;
-	grid-gap: 30px;
-	grid-template-areas:
-		'bioimage bio bio'
-		'job1 job2 job3';
-	grid-template-columns: repeat(3, 1fr);
+    display: grid;
+    grid-gap: 30px;
+    grid-template-areas:
+        'bioimage bio bio'
+        'job1 job2 job3';
+    grid-template-columns: repeat(3, 1fr);
 
-	.bio-image {
-		width: 250px;
-		height: 250px;
-		object-fit: cover;
-		grid-area: bioimage;
-		margin: auto;
-		border-radius: 50%;
-		border: 3px solid $secondary-color;
-	}
+    .bio-image {
+        width: 250px;
+        height: 250px;
+        object-fit: cover;
+        grid-area: bioimage;
+        margin: auto;
+        border-radius: 50%;
+        border: 3px solid $secondary-color;
+    }
 
-	.bio {
-		grid-area: bio;
-		font-size: 1.5rem;
-	}
+    .bio {
+        grid-area: bio;
+        font-size: 1.5rem;
+    }
 
-	.job-1 {
-		grid-area: job1;
-	}
+    .job-1 {
+        grid-area: job1;
+    }
 
-	.job-2 {
-		grid-area: job2;
-	}
+    .job-2 {
+        grid-area: job2;
+    }
 
-	.job-3 {
-		grid-area: job3;
-	}
+    .job-3 {
+        grid-area: job3;
+    }
 
-	.job {
-		background: lighten($primary-color, 5);
-		padding: 0.5rem;
-		border-bottom: 5px solid $secondary-color;
-	}
+    .job {
+        background: lighten($primary-color, 5);
+        padding: 0.5rem;
+        border-bottom: 5px solid $secondary-color;
+    }
 }
 
 // Project Page
 .projects {
-	// min-height: 100vh;
-	display: grid;
-	grid-gap: 0.8rem;
-	grid-template-columns: repeat(3, 1fr);
+    // min-height: 100vh;
+    display: grid;
+    grid-gap: 0.8rem;
+    grid-template-columns: repeat(3, 1fr);
 
-	// .item {
-	//     margin-bottom: 4rem;
-	//     ;
-	// }
+    // .item {
+    //     margin-bottom: 4rem;
+    //     ;
+    // }
 
-	img {
-		width: 100%;
-		border: 3px solid #fff;
+    img {
+        width: 100%;
+        border: 3px solid #fff;
 
-		&:hover {
-			opacity: 0.5;
-			border-color: $secondary-color;
-			@include easeOut;
-		}
-	}
+        &:hover {
+            opacity: 0.5;
+            border-color: $secondary-color;
+            @include easeOut;
+        }
+    }
 }
 
 // Contact Page
 .boxes {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	align-items: center;
-	margin-top: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
 
-	div {
-		font-size: 2rem;
-		// border: 3px solid#fff;
-		padding: 1.5rem 2.5rem;
-		margin-bottom: 3rem;
-		@include easeOut;
+    div {
+        font-size: 2rem;
+        // border: 3px solid#fff;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 3rem;
+        @include easeOut;
 
-		&:hover {
-			// padding: .5rem 1.5rem;
-			background: $secondary-color;
-			color: set-text-color($secondary-color);
+        &:hover {
+            // padding: .5rem 1.5rem;
+            background: $secondary-color;
+            color: set-text-color($secondary-color);
 
-			span {
-				color: set-text-color($secondary-color);
-			}
-		}
-	}
+            span {
+                color: set-text-color($secondary-color);
+            }
+        }
+    }
 }
 
 // Project Info Styles
 .project-info {
-	border: 1px solid $secondary-color;
-	border-radius: 20px;
-	display: inline-block;
-	margin: 1rem 0.3rem 0 0;
-	padding: 0.3rem 1rem;
-	font-size: 0.9rem;
-	letter-spacing: 1px;
+    border: 1px solid $secondary-color;
+    border-radius: 20px;
+    display: inline-block;
+    margin: 1rem 0.3rem 0 0;
+    padding: 0.3rem 1rem;
+    font-size: 0.9rem;
+    letter-spacing: 1px;
 }
 
 // Button Styles
 .btn {
-	display: block;
-	padding: 0.5rem 1rem;
-	border: 0;
-	margin-bottom: 0.3rem;
-	text-align: center;
+    display: block;
+    padding: 0.5rem 1rem;
+    border: 0;
+    margin-bottom: 0.3rem;
+    text-align: center;
 
-	&:hover {
-		background: $secondary-color;
-		color: set-text-color($secondary-color);
-	}
+    &:hover {
+        background: $secondary-color;
+        color: set-text-color($secondary-color);
+    }
 
-	&-dark {
-		@extend.btn;
-		background: darken($primary-color, 50);
-		color: #fff;
-	}
+    &-dark {
+        @extend.btn;
+        background: darken($primary-color, 50);
+        color: #fff;
+    }
 
-	&-light {
-		@extend .btn;
-		background: lighten($primary-color, 50);
-	}
+    &-light {
+        @extend .btn;
+        background: lighten($primary-color, 50);
+    }
 }
 
 //  Sticky Footer , calc function on main
 #main-footer {
-	text-align: center;
-	padding: 1rem;
-	// background: darken($primary-color, 10);
-	background: rgba(0, 0, 0, 0.8);
-	color: set-text-color($primary-color);
-	height: 60px;
+    text-align: center;
+    padding: 1rem;
+    // background: darken($primary-color, 10);
+    background: rgba(0, 0, 0, 0.8);
+    color: set-text-color($primary-color);
+    height: 60px;
 }
 
 // Media Queries at the bottom to run after normal CSS
